app/assets/stylesheets/embed.css
body {
  margin: 0px;
  padding: 0px;
  color: #000;
  font-family: Roboto, Arial, sans-serif;
  line-height: 1.5em;
  font-size: 13px;
  text-align: left;
}
html, body {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background: none;
}

a {
  color: #337287;
  font-weight: bold;
  outline: none;
}

h1 {
  font-size: 1em;
  font-size-adjust: 0.75;
  border-bottom: 1px solid rgba(0,0,150, 0.3);
  text-shadow: 0 0.05em 0.03em rgba(0,0,0,0.3);
  background: none;
  margin: -5px;
  padding: 15px;
}

img.iconic {
  background: none;
  border: none;
  box-shadow: none;
}

.listing.compact.playlist .controls a {
  line-height: 13.5px;
}
.listing.compact.playlist {
  transition: left 0.5s ease;
  position: fixed;
  top: 0;
  bottom: 0;
  left: -50%;
  width: 50%;
  background: rgba(28,28,28,0.9);
  color: #eee;
}
.listing.compact.playlist.visible {
  left: 0;
}
.playlist .controls a,
.listing.compact .row,
.listing.compact .items .row > div {
  color: #eee;
}

.playlist .controls a:hover,
.listing.compact .row.selected, .listing.compact .row:hover {
  background: rgba(255,255,255,0.2);
}
.listing.compact.playlist .scroll-container {
  position: absolute;
  min-height: auto;
  max-height: 100%;
  top: 35px;
  bottom: 0;
  box-shadow: 0 0px 3px 0 #333 inset;
}

#video {
  width: 100% !important;
  height: 100% !important;
  max-height: 100% !important;
  padding: 0 !important;
}

